# medotdev

./: README.md
medotdev/: Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
medotdev/src/: app.rs  autocomplete.rs  color_wheel.rs  main.rs
medotdev/src/commands/: warehouse.rs
medotdev/src/components/: sidebar.rs  terminal.rs
medotdev/style/: output.css
rs-medotdev/: Cargo.toml  Dockerfile  README.md
rs-medotdev/src/: app.rs  autocomplete.rs  lib.rs  main.rs
rs-medotdev/src/commands/: warehouse.rs
rs-medotdev/src/components/: sidebar.rs  terminal.rs
rs-medotdev/style/: output.css
ts-medotdev/: package-lock.json  package.json  tailwind.config.ts
ts-medotdev/src/components/: LinkButton.tsx
ts-medotdev/src/datastructures/: Autocomplete.tsx  Command.tsx  LogStack.tsx
ts-medotdev/src/pages/: index.tsx
